[project]
name = "events-bd"
version = "1.0.0"

description = "View special events for your Ballsdex bot."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Events-BD"
Documentation = "https://github.com/arielaram/Events-BD#readme"
Issues = "https://github.com/arielaram/Events-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["events_app"]
