[project]
name = "exchange-bd"
version = "1.0.0"

description = "An exchange command extra package for Ballsdex v3, swap one of your balls for a random new one."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
readme = "README.md"
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Exchange-BD"
Documentation = "https://github.com/arielaram/Exchange-BD#readme"
Issues = "https://github.com/arielaram/Exchange-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exchange_app"]
