[project]
name = "funhouse-bd"
version = "1.0.0"

description = "Fun commands for Ballsdex v3 — fortunes, cheers, confetti, and good vibes."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
readme = "README.md"
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Funhouse-BD"
Documentation = "https://github.com/arielaram/Funhouse-BD#readme"
Issues = "https://github.com/arielaram/Funhouse-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["funhouse_app"]
