[project]
name = "preview-bd"
version = "1.0.0"

description = "Preview card images in Ballsdex v3 without owning them."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "arielaram", email = "arielaram@nationdex.com" },
]
readme = "README.md"
requires-python = ">=3.14"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/arielaram/Preview-BD"
Documentation = "https://github.com/arielaram/Preview-BD#readme"
Issues = "https://github.com/arielaram/Preview-BD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["preview_app"]
